--- a/Front---End/src/app/stolen-vehicles/stolen-vehicles.component.html
+++ b/Front---End/src/app/stolen-vehicles/stolen-vehicles.component.html
@@ -29,7 +29,7 @@
                                     Photo
                                 </th>
                                 <th>
-                                    Profile
+                                    Phone number
                                 </th>
                             </thead>
                             <tbody *ngFor="let vehicle of vehicles">
