--- a/Front---End/src/app/dashboard/dashboard.component.html
+++ b/Front---End/src/app/dashboard/dashboard.component.html
@@ -6,18 +6,12 @@
               <div class="card card-stats">
                   <div class="card-header card-header-warning card-header-icon">
                       <div class="card-icon">
-                          <i class="material-icons">content_copy</i>
+                          <i class="material-icons">info_outline</i>
                       </div>
                       <p class="card-category">Daily Distance</p>
                       <h3 class="card-title">{{dashboard.dailyXp}}
                           <small>XP</small>
                       </h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons text-danger">warning</i>
-                          <a href="javascript:void(0)">Get More Space...</a>
-                      </div>
                   </div>
               </div>
           </div>
@@ -32,28 +26,18 @@
                         <small>XP</small>
                       </h3>
                   </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">date_range</i> Last 24 Hours
-                      </div>
-                  </div>
               </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                   <div class="card-header card-header-danger card-header-icon">
                       <div class="card-icon">
-                          <i class="material-icons">info_outline</i>
+                          <i class="material-icons">store</i>
                       </div>
                       <p class="card-category">Monthly Distance</p>
                       <h3 class="card-title">{{dashboard.monthlyXp}}  
                         <small>XP</small>
                       </h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">local_offer</i> Tracked from Github
-                      </div>
                   </div>
               </div>
           </div>
@@ -68,11 +52,6 @@
                         <small>XP</small>
                       </h3>
                   </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">update</i> Just Updated
-                      </div>
-                  </div>
               </div>
           </div>
       </div>
@@ -84,8 +63,6 @@
                   </div>
                   <div class="card-body">
                       <h4 class="card-title">Daily XP</h4>
-                      <!-- <p class="card-category">
-                          <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p> -->
                   </div>
                   <div class="card-footer">
                       <div class="stats">
