--- a/Front---End/src/app/register/register.component.html
+++ b/Front---End/src/app/register/register.component.html
@@ -8,31 +8,31 @@
                 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input type="text" formControlName="username" class="form-control"  />
+                        <input type="text" formControlName="username" class="form-control" required  maxlength="17" minlength="5" />
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" formControlName="email" class="form-control"  />
+                        <input type="email" formControlName="email" class="form-control" required maxlength="25" minlength="5"/>
                     </div>
                     <div class="form-group">
                         <label for="country">Country</label>
-                        <input type="text" formControlName="country" class="form-control" />
+                        <input type="text" formControlName="country" class="form-control" required maxlength="25" minlength="3"/>
                     </div>
                     <div class="form-group">
                         <label for="city">City</label>
-                        <input type="text" formControlName="city" class="form-control"  />
+                        <input type="text" formControlName="city" class="form-control" required maxlength="25" minlength="5"/>
                     </div>
                     <div class="form-group">
                         <label for="phoneNumber">Phone Number</label>
-                        <input type="text" formControlName="phoneNumber" class="form-control"  />
+                        <input type="text" formControlName="phoneNumber" class="form-control"   required maxlength="15" minlength="9"/>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" formControlName="password" class="form-control"  />
+                        <input type="password" formControlName="password" class="form-control" required maxlength="15" minlength="5" />
                     </div>
                     <div class="form-group">
                         <label for="description">Description</label>
-                        <input type="text" formControlName="description" placeholder="Funny description" class="form-control" />
+                        <input type="text" formControlName="description" placeholder="Funny description" class="form-control" required maxlength="35" minlength="9"/>
                     </div>
                     <div class="form-group">
                         <button [disabled]="loading" class="btn btn-primary">
@@ -42,67 +42,6 @@
                         <a routerLink="/login" class="btn btn-link">Cancel</a>
                     </div>
                 </form>
-                    <!-- <h2>Register</h2>
-                    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-                        <div class="form-group">
-                            <label for="username">Username</label>
-                            <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                                <div *ngIf="f.username.errors.required">Username is required</div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                                <div *ngIf="f.email.errors.required">Last Name is required</div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="username">Country</label>
-                            <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                                <div *ngIf="f.username.errors.required">Username is required</div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="username">City</label>
-                            <input type="username" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                                <div *ngIf="f.username.errors.required">Password is required</div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Phone Number</label>
-                            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                                <div *ngIf="f.password.errors.required">Password is required</div>
-                                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Password</label>
-                            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                                <div *ngIf="f.password.errors.required">Password is required</div>
-                                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">About Me</label>
-                            <input type="password" formControlName="password" placeholder="Funny description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                                <div *ngIf="f.password.errors.required">Password is required</div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <button [disabled]="loading" class="btn btn-primary">
-                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                                Register
-                            </button>
-                            <a routerLink="/login" class="btn btn-link">Cancel</a>
-                        </div>
-                    </form> -->
             </div>       
        </div>
     </div>
