--- a/Front---End/src/app/guild/guild.component.html
+++ b/Front---End/src/app/guild/guild.component.html
@@ -73,6 +73,9 @@
                                     City
                                 </th>
                                 <th>
+                                    Contact
+                                </th>
+                                <th>
                                     XP
                                 </th>
                             </thead>
@@ -92,6 +95,9 @@
                                     </td>
                                     <td>
                                         {{user.phoneNumber}}
+                                    </td>
+                                    <td>
+                                        {{user.totalXP}}
                                     </td>
                                 </tr>
                             </tbody>
